--- a/css/main.css
+++ b/css/main.css
@@ -176,7 +176,7 @@ a{
 }
 
 .covid-info__item:nth-child(1){
-    border-right: 2px solid #ff0022;
+    border-right: 2px solid #EB5569;
     padding-right: 42px;
 }
 
